# otus-ml-basic-cli

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: work.ipynb
src/: data.py  main.py  model.py
tests/: test_data.py  test_model.py
